    does not use File::Path.
 * Fixed bug in Auth - stopped you seeing documents.
 * Removed need for File::Path
 * Fixed bug that the eprint_fields file was utf-8 encoded rather than 
    latin-1

2006-11-13 cjg
 * Removed margins from the top and bottom of the upload help to save 
    vertical real estate.
 * Radio-button input for metafields can now have UNSPECIFIED if it's 
    neither multiple or required.
 * Date-type now uses radio-button-input
 * Set-input fields are now inside a grid table for consistent styling.
 * Multi field help now renders nicely if a field does not have help.

2006-11-14 moj
 * Switched document_upload.pl example for required fields to return
    mime types.

2006-11-14 moj
 * Fixed typo in RoMEO

2006-11-14 moj
 * Added target="_blank" to license + upload help.

2006-11-14 cjg
 * Updated NEWS for beta-2
 * Minor css + javascript tweaks to make things look better in windows.

2006-11-14 cjg
 * Improved help in epadmin

2006-11-14 cjg
 * Removed unused adminemail config option from email.pl
 * Fixed transparency image problems in IE
 * Stopped views being centered
 * Stopped unwanted centering in several places.

2006-11-14 cjg
 * Fixed bug in rmtree when dir doesn't exist if gave a warning!
 * (re)Fixed bug in ordervalues of metafield pagerange.

======================================================================
14/11/2006 - EPRINTS-3.0-beta-2
======================================================================

2006-11-14 cjg
 * Tweaked favicon - could still be better
 * Non existant archiveid now gives a nice error.

2006-11-15 tdb
 * Moved mkdir to EPrints::Platform (#2632)
 * Documented EPrints::Platform

2006-11-15 moj
 * Added EPJS_enter_click - clicks a button when enter is pressed in 
    a field.
 * Set reference rows to 15 (also fixes Safari bug)
 * Set subject quicksearch to use the enter javascript

2006-11-15 moj
 * Metafield.pm now uses the noenter input field (enter blocking wasn't working
    on some fields). 