@@ -14,8 +14,8 @@
   </stage>
 
   <stage name="files">
-    <component type="XHTML" surround="Light"><epc:phrase ref="Plugin/InputForm/Component/Upload:help" /></component>
-    <component type="Upload" surround="None">
+    <component type="XHTML"><epc:phrase ref="Plugin/InputForm/Component/Upload:help" /></component>
+    <component type="Upload">
       <field ref="format" />
       <field ref="formatdesc" />
       <field ref="security" />
